# fintual-portfolio

./: README.md  pyproject.toml
backend/: .gitignore  README.md  pyproject.toml
backend/src/: constants.py  models.py  schemes.py  server.py  utils.py
backend/static/: fntl_fixture.csv
backend/tests/: aapl_fixture.csv  test_stock.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/hooks/: useStatistics.ts
frontend/src/lib/: types.ts
frontend/src/services/: getStatistics.ts
src/: files.py  portfolio.py  stock.py
tests/: googl_fixture.csv  msft_fixture.csv  stock_fixtures.csv  test_stock.py
